--- a/tasks/mangle.yml
+++ b/tasks/mangle.yml
@@ -17,3 +17,4 @@
 
   - name: Remove firewall-mangle-{{inventory_hostname}}.rsc from router
     raw:  "/file remove firewall-mangle-{{inventory_hostname}}.rsc"
+    when: mikrotik_firewall.delete_configs_on_target_router
