--- a/tasks/nat.yml
+++ b/tasks/nat.yml
@@ -17,3 +17,4 @@
 
   - name: Remove firewall-nat-{{inventory_hostname}}.rsc from router
     raw: "/file remove firewall-nat-{{inventory_hostname}}.rsc"
+    when: mikrotik_firewall.delete_configs_on_target_router
